// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel css prop extract babel 6 basic with extractStatic 1`] = `
"import \\"./emotion.emotion.css\\";
import { css as _css } from \\"emotion\\";
<div className={\\"css-jf1v9l\\" + \\" a\\"}></div>;


emotion.emotion.css
.css-jf1v9l{color:brown;}"
`;

exports[`babel css prop extract babel 7 basic with extractStatic 1`] = `
"import \\"./emotion.emotion.css\\";
import { css as _css } from \\"emotion\\";
<div className={\\"css-jf1v9l\\" + \\" a\\"}></div>;


emotion.emotion.css
.css-jf1v9l{color:brown;}"
`;

exports[`babel css prop inline babel 6 StringLiteral css prop value 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 6 another relative custom instance 1`] = `
"import { css as _css } from \\"../my-emotion-instance\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 6 basic inline 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\") + \\" a\\"}></div>;"
`;

exports[`babel css prop inline babel 6 basic object 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={_css({
  color: 'brown'
}) + \\" a\\"}></div>;"
`;

exports[`babel css prop inline babel 6 className as expression 1`] = `
"import { merge as _merge } from \\"emotion\\";
import { css as _css } from \\"emotion\\";
<div className={_merge(
/*#__PURE__*/
_css(\\"color:brown;\\") + (\\" \\" + variable))}></div>;"
`;

exports[`babel css prop inline babel 6 className as expression string 1`] = `
"import { merge as _merge } from \\"emotion\\";
import { css as _css } from \\"emotion\\";
<div className={_merge(
/*#__PURE__*/
_css(\\"color:brown;\\") + (\\" \\" + \`test__class\`))} this={\`hello\`}></div>;"
`;

exports[`babel css prop inline babel 6 css empty 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css()}></div>;"
`;

exports[`babel css prop inline babel 6 custom instance 1`] = `
"import { css as _css } from \\"my-emotion-instance\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 6 dynamic inline 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:\\", color, \\";\\") + \\" a\\"}></div>;"
`;

exports[`babel css prop inline babel 6 emptyClassName 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 6 hoisting object styles 1`] = `
"import { css as _css } from \\"emotion\\";
var _ref = {
  color: 'brown'
};

const Profile = () => <div className={_css(_ref) + \\" a\\"}></div>;"
`;

exports[`babel css prop inline babel 6 hoisting string styles 1`] = `
"import { css as _css } from \\"emotion\\";
var _ref = \\"color:\\";

const Profile = () => {
  const color = \\"blue\\";
  <div className={
  /*#__PURE__*/
  _css(_ref, color)}></div>;
};"
`;

exports[`babel css prop inline babel 6 label in class component 1`] = `
"import { css as _css } from \\"emotion\\";

class ClsComp extends React.Component {
  render() {
    return <div className={
    /*#__PURE__*/
    _css(\\"foolabel:ClsComp;\\")}>Hello</div>;
  }

}"
`;

exports[`babel css prop inline babel 6 label in higher order component 1`] = `
"import { css as _css } from \\"emotion\\";

const foo = W => class extends Component {
  render() {
    return <div className={
    /*#__PURE__*/
    _css(\\"color:brown;label:foo;\\")}>Hello</div>;
  }

};"
`;

exports[`babel css prop inline babel 6 label in stateless functional component 1`] = `
"import { css as _css } from \\"emotion\\";

const SFC = () => {
  return <div className={
  /*#__PURE__*/
  _css(\\"color:brown;label:SFC;\\")}>Hello</div>;
};"
`;

exports[`babel css prop inline babel 6 no css attr 1`] = `"<div></div>;"`;

exports[`babel css prop inline babel 6 no import css prop 1`] = `
"<div className={merge(
/*#__PURE__*/
css(\\"color:brown;\\") + (\\" \\" + \`test__class\`))}></div>;"
`;

exports[`babel css prop inline babel 6 noClassName 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 6 redefined-import: basic inline 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\") + \\" a\\"}></div>;"
`;

exports[`babel css prop inline babel 6 relative custom instance 1`] = `
"import { css as _css } from \\"./my-emotion-instance\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 6 with spread arg in jsx opening tag 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\") + \\" a\\"} {...rest}></div>;"
`;

exports[`babel css prop inline babel 7 StringLiteral css prop value 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 7 another relative custom instance 1`] = `
"import { css as _css } from \\"../my-emotion-instance\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 7 basic inline 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\") + \\" a\\"}></div>;"
`;

exports[`babel css prop inline babel 7 basic object 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={_css({
  color: 'brown'
}) + \\" a\\"}></div>;"
`;

exports[`babel css prop inline babel 7 className as expression 1`] = `
"import { merge as _merge } from \\"emotion\\";
import { css as _css } from \\"emotion\\";
<div className={_merge(
/*#__PURE__*/
_css(\\"color:brown;\\") + (\\" \\" + variable))}></div>;"
`;

exports[`babel css prop inline babel 7 className as expression string 1`] = `
"import { merge as _merge } from \\"emotion\\";
import { css as _css } from \\"emotion\\";
<div className={_merge(
/*#__PURE__*/
_css(\\"color:brown;\\") + (\\" \\" + \`test__class\`))} this={\`hello\`}></div>;"
`;

exports[`babel css prop inline babel 7 css empty 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css()}></div>;"
`;

exports[`babel css prop inline babel 7 custom instance 1`] = `
"import { css as _css } from \\"my-emotion-instance\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 7 dynamic inline 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:\\", color, \\";\\") + \\" a\\"}></div>;"
`;

exports[`babel css prop inline babel 7 emptyClassName 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 7 hoisting object styles 1`] = `
"import { css as _css } from \\"emotion\\";
var _ref = {
  color: 'brown'
};

const Profile = () => <div className={_css(_ref) + \\" a\\"}></div>;"
`;

exports[`babel css prop inline babel 7 hoisting string styles 1`] = `
"import { css as _css } from \\"emotion\\";
var _ref = \\"color:\\";

const Profile = () => {
  const color = \\"blue\\";
  <div className={
  /*#__PURE__*/
  _css(_ref, color)}></div>;
};"
`;

exports[`babel css prop inline babel 7 label in class component 1`] = `
"import { css as _css } from \\"emotion\\";

class ClsComp extends React.Component {
  render() {
    return <div className={
    /*#__PURE__*/
    _css(\\"foolabel:ClsComp;\\")}>Hello</div>;
  }

}"
`;

exports[`babel css prop inline babel 7 label in higher order component 1`] = `
"import { css as _css } from \\"emotion\\";

const foo = W => class extends Component {
  render() {
    return <div className={
    /*#__PURE__*/
    _css(\\"color:brown;label:foo;\\")}>Hello</div>;
  }

};"
`;

exports[`babel css prop inline babel 7 label in stateless functional component 1`] = `
"import { css as _css } from \\"emotion\\";

const SFC = () => {
  return <div className={
  /*#__PURE__*/
  _css(\\"color:brown;label:SFC;\\")}>Hello</div>;
};"
`;

exports[`babel css prop inline babel 7 no css attr 1`] = `"<div></div>;"`;

exports[`babel css prop inline babel 7 no import css prop 1`] = `
"<div className={merge(
/*#__PURE__*/
css(\\"color:brown;\\") + (\\" \\" + \`test__class\`))}></div>;"
`;

exports[`babel css prop inline babel 7 noClassName 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 7 redefined-import: basic inline 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\") + \\" a\\"}></div>;"
`;

exports[`babel css prop inline babel 7 relative custom instance 1`] = `
"import { css as _css } from \\"./my-emotion-instance\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\")}></div>;"
`;

exports[`babel css prop inline babel 7 with spread arg in jsx opening tag 1`] = `
"import { css as _css } from \\"emotion\\";
<div className={
/*#__PURE__*/
_css(\\"color:brown;\\") + \\" a\\"} {...rest}></div>;"
`;

exports[`with module transformer in babel 7 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Home = void 0;

var _emotion = require(\\"emotion\\");

var _react = _interopRequireWildcard(require(\\"react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

class Home extends _react.Component {
  render() {
    return <div>
          <div className={
      /*#__PURE__*/
      (0, _emotion.css)(\\"background:yellow;\\")}>yellow</div>
          <div className={
      /*#__PURE__*/
      (0, _emotion.css)(\\"background:pink;\\")}>pink</div>
        </div>;
  }

}

exports.Home = Home;"
`;
